main.tf
resource "aws_vpc" "myvpc" {
    cidr_block = var.cider
  
}
resource "aws_subnet" "subnet1" {
    vpc_id = aws_vpc.myvpc.id
    cidr_block = "10.0.0.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

}
resource "aws_subnet" "subnet2" {
    vpc_id = aws_vpc.myvpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1b"
    map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.myvpc.id

}
resource "aws_route_table" "RT" {
    vpc_id = aws_vpc.myvpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
}
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.RT.id
}
resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.subnet2.id
  route_table_id = aws_route_table.RT.id
}
resource "aws_security_group" "mysg" {
    name = "websg"
    vpc_id = aws_vpc.myvpc.id

    ingress{
        description = "HTTP from VPC"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress{
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
    tags = {
    Name = "web-sg"
  }
}
resource "aws_s3_bucket" "bucket" {
    bucket = "my-s3-bucket" # globally unique

}


resource "aws_instance" "webserver1" {
  ami           = "ami-12345678" # localstack = fake ami-id
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.mysg.id]
  subnet_id = aws_subnet.subnet1.id
  #user_data = base64encode(file("userdata.sh"))
  user_data = "#!/bin/bash\necho 'Hello from server' > /var/tmp/hello.txt"
}

resource "aws_instance" "webserver2" {
  ami           = "ami-12345678" # localstack = fake ami-id
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.mysg.id]
  subnet_id = aws_subnet.subnet2.id
  #user_data = base64encode(file("userdata1.sh"))
  user_data = "#!/bin/bash\necho 'Hello from server 2' > /var/tmp/hello.txt"
}

resource "aws_lb" "myalb"{
    name               = "myalb"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.mysg.id]
    subnets            = [aws_subnet.subnet1.id, aws_subnet.subnet2.id]
    tags = {
    Name = "web"
    }

}
resource "aws_lb_target_group" "tg" {
    name     = "tg"
    port     = 80
    protocol = "HTTP"
    vpc_id   = aws_vpc.myvpc.id
    health_check {
        path = "/"
        port = "traffic-port"

    }
}
resource "aws_lb_target_group_attachment" "attach1" {
    target_group_arn = aws_lb_target_group.tg.arn
    target_id        = aws_instance.webserver1.id
    port             = 80
}
resource "aws_lb_target_group_attachment" "attach2" {
    target_group_arn = aws_lb_target_group.tg.arn
    target_id        = aws_instance.webserver2.id
    port             = 80
}

resource "aws_lb_listener" "listener" {
    load_balancer_arn = aws_lb.myalb.arn
    port              = "80"
    protocol          = "HTTP"

    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.tg.arn
    }
}
output "loadbalancerdns" {
    value = aws_lb.myalb.dns_name
}
